# word-game

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Gulpfile.js  README.md  build.rs  build.sh  clean.sh  compose.yaml  kill-docker.sh  package-lock.json  package.json  rolldown.config.js  rollup.config.js  run.sh  tsconfig.json
.cargo/: config.toml
assets/: site.webmanifest
design files/: Game.epgz
prebuild/: const_fns.rs
src/: lib.rs
src/backend/: index.ts
src/frontend/: App.tsx  Option.ts  _variables.scss  index.html  loggit.ts  main.tsx  style.scss
src/frontend/ButtonPanel/: ButtonPanel.tsx  button-panel.scss
src/frontend/GameBoard/: GameBoard.tsx  game-board.scss
src/frontend/GameBoard/Tile/: Tile.tsx  tile.scss
src/frontend/Navbar/: Navbar.tsx
src/frontend/Navbar/Login/: Login.tsx
src/frontend/Navbar/NavbarScore/: NavbarScore.tsx  navbar-score.scss
src/frontend/Navbar/NavbarTimer/: NavbarTimer.tsx  navbar-timer.scss
src/frontend/game/: DictionaryTree.ts  Game.ts  const_fns.rs  dictionary_tree.rs  game.rs  generation.rs  generation.ts  mod.rs  offlineFunctions.ts  solver.ts
