[package]
name = "word-game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = {version = "0.3.2", features = ["wasm_js"]}
js-sys = "0.3.77"
log = "0.4.27"
rand = "0.9.1"
wasm-bindgen = "0.2.100"
wasm-log = "0.3.1"
web-sys = {version = "0.3.77", features = ["CustomEvent", "CustomEventInit", "Window"]}
